Fix some more tests